# xrf55_benchmark

./: .gitignore  LICENSE  README.md  analysis_s3_vs_s4.md  pyproject.toml  requirements.txt
csi_cut_tool/: csi_tool.py  test_cut_and_pad.py
docs/: protocols.md
legacy/configs/: apwmamba.yaml
legacy/wavcnnmamba/: model.py  model_late_fs.py
mrngoc/: README.md  data.py  model.py  requirements.txt  run.py  tfmamba_kaggle.ipynb  train.py
scripts/local/: 02_train.py  convert_xrf55_to_npy.py  demo_kaggle_plots.py
src/data/: loso_splits.py  splits.py  verify_ids.py
src/evaluation/: plots.py
src/training/: train_utils.py  xrf55_trainer.py
tool/csi_cut_tool/: test_cut_and_pad.py
tool/plot_tool/: plot_tool.py
tools/: __init__.py
tools/csi_cut_tool/: README.md  csi_tool.py  test_cut_and_pad.py
tools/plot_tool/: README.md  plot_tool.py
wavmamba/: .gitignore  LICENSE  README.md  build_dataset.py  config.py  dataset.py  model.py  preprocess.py  requirements.txt  train.py
wavmamba/notebooks/: wavmamba_kaggle.ipynb
xrf55_bench/: __init__.py  config.py  dataset.py  reporting.py  trainer.py  xrf55_protocol.txt
xrf55_bench/notebooks/: ablation_ladder.ipynb  resnet18_1d.ipynb  s41_multidataset.ipynb  s4_multidataset.ipynb  s4a_multidataset.ipynb  s4nogn_multidataset.ipynb  tf_mamba.ipynb  wavdualmamba.ipynb  wavdualmamba_v2.ipynb  wavmamba.ipynb  wavmamba_late.ipynb
xrf55_bench/preprocessing/: amplitude.py  dwt.py  multi_dataset.py
xrf55_bench/scripts/: 00_parse_csi.py  01_bench_npy270_raw.py  01_build_dataset_raw.py  01_convert_to_npy_4d.py  _gen_s4_nb.py  (+15 more)
(+55 files in other folders)
